fix: letter spacings accros tokens

--- a/src/components/inputs/input/styles/figma.scss
+++ b/src/components/inputs/input/styles/figma.scss
@@ -120,7 +120,7 @@
   --input-text-font-family: var(--font-stack);
   --input-text-font-size: var(--font-size-xsmall);
   --input-text-font-weight: var(--font-weight-normal);
-  --input-text-letter-spacing: var(--font-letter-spacing-neg-small);
+  --input-text-letter-spacing: var(--font-letter-spacing-pos-xlarge);
   --input-text-line-height: var(--font-line-height-default);
   --input-text-placeholder-color-default: var(--figma-color-text-secondary);
   --input-text-placeholder-color-disabled: var(--figma-color-text-disabled);
