--- a/src/components/inputs/input/styles/sketch.scss
+++ b/src/components/inputs/input/styles/sketch.scss
@@ -120,7 +120,7 @@
   --input-text-font-family: var(--font-stack);
   --input-text-font-size: var(--font-size-medium);
   --input-text-font-weight: var(--font-weight-normal);
-  --input-text-letter-spacing: var(--font-letter-spacing-neg-small);
+  --input-text-letter-spacing: var(--font-letter-spacing-pos-medium);
   --input-text-line-height: var(--font-line-height-default);
   --input-text-placeholder-color-default: var(--sketch-color-foreground-tertiary);
   --input-text-placeholder-color-disabled: var(--sketch-color-foreground-disabled);
